# neutron-detector

./: CMakeLists.txt  README.md  compile.sh  main.cpp  source.g4
data/: arapuca.cfg  x-arapuca.gdml
data/pTerphenyl/: abs-extinction.txt  emission.txt
macros/: neutrons.g4  photons.batch  photons.mac  run_cut.sh  run_distance.sh  run_internal.sh  run_molarity.sh
source/: MyAnthracene.h  MyDetector.cpp  main.cpp
source/G4/: ActionInitialization.cpp  ActionInitialization.h  Commands.cpp  Commands.h  Core.h  CounterHit.cpp  CounterHit.h  DetectorConstruction.cpp  DetectorConstruction.h  EventAction.cpp  EventAction.h  GeneralCounterSD.cpp  GeneralCounterSD.h  Globals.h  PhysicsList.cpp  PhysicsList.h  PrimaryGenerator.cpp  PrimaryGenerator.h  RunAction.cpp  RunAction.h
source/G4/FastModels/: DichoricFilterModel.cpp  DichroicFilterModel.h
source/G4/Generators/: GeneralParticleSource.cpp  GeneralParticleSource.h
source/G4/Geometry/: AbsorptionTest.cpp  AbsorptionTest.h  NeutronDetectors.cpp  NeutronDetectors.h  XARAPUCA.cpp  XARAPUCA.h
source/G4/Singletons/: GDMLBuilder.cpp  GDMLBuilder.h  Hits.cpp  Hits.h  InputTable.cpp  InputTable.h  Logger.cpp  Logger.h  MaterialProperties.cpp  MaterialProperties.h  SensDet.cpp  SensDet.h  Utilities.cpp  Utilities.h
